# aa-assets

./: .coveragerc  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  Makefile  README.md  package-lock.json  package.json  pyproject.toml  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  suggestion_report.yaml
.github/workflows/: autotester.yml  pypi.yml
assets/: .isort.cfg  __init__.py  app_settings.py  apps.py  auth_hooks.py  constants.py  contexts.py  decorators.py  errors.py  forms.py  hooks.py  managers.py  models.py  providers.py  tasks.py  urls.py  views.py
assets/api/: __init__.py  helpers.py  schema.py
assets/api/assets/: assets.py  helper.py
assets/api/requests/: helper.py  requests.py
assets/helpers/: discord.py  eveonline.py  static_files.py
assets/locale/: django.pot
assets/locale/de/LC_MESSAGES/: django.mo  django.po
assets/locale/es/LC_MESSAGES/: django.po
assets/locale/fr_FR/LC_MESSAGES/: django.po
assets/locale/ja/LC_MESSAGES/: django.po
assets/locale/ru/LC_MESSAGES/: django.po
assets/locale/sk/LC_MESSAGES/: django.po
assets/locale/uk/LC_MESSAGES/: django.po
assets/migrations/: 0001_init_v2.py  0001_initial.py  0002_alter_request_approver_user_and_more.py  0002_alter_request_status.py  0003_remove_request_order_request_name_requestassets.py  0004_alter_general_options.py  0005_alter_assets_eve_type_and_more.py  0006_migrate_eveentity_alter_fields.py  0007_alter_location_owner.py
assets/static/assets/css/: assets.css
assets/static/assets/js/: assets.js  (+3 more)
assets/task_helpers/: etag_helpers.py  location_helpers.py
assets/templates/assets/: admin.html  assets.html  base.html  index.html  location.html  requests.html
assets/templatetags/: assets.py
assets/tests/: __init__.py  test_decarators.py  test_eveentity_manager.py  test_eveonline.py  test_views.py
assets/tests/testdata/: utils.py
testauth/settings/: local.py
(+30 files in other folders)
