[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
]

[project]
name = "aa-assets"
description = "Show Assets from character/corporation and give the option to order it."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Geuthur", email = "devgeuthur@gmail.com" },
]
requires-python = ">=3.10"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dynamic = [
    "version",
]
dependencies = [
    "allianceauth>=4.10,<5",
    "allianceauth-app-utils @ git+https://gitlab.com/Geuthur/allianceauth-app-utils.git@openapi",
    "django-esi>=8a4",
    "django-eveuniverse>=1.6.0",
    "django-ninja",
]
optional-dependencies.tests-allianceauth-latest = [
    "coverage",
    "factory-boy",
]
urls.Changelog = "https://github.com/Geuthur/aa-assets/blob/master/CHANGELOG.md"
urls.Documentation = "https://github.com/Geuthur/aa-assets/blob/master/README.md"
urls.Donations = "https://ko-fi.com/Geuthur"
urls.Homepage = "https://github.com/Geuthur/aa-assets"
urls.Source = "https://github.com/Geuthur/aa-assets"
urls.Tracker = "https://github.com/Geuthur/aa-assets/issues"

[tool.hatch.build]
include = [
    "/assets",
]

[tool.hatch.version]
path = "assets/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true
